[package]
name = "anchor-metaplex"
version = "0.4.0"
edition = "2018"
authors = ["Pavlos Polianidis <info@apocentre.com>"]
repository = "https://github.com/Apocentre/anchor-metaplex"
description = "collection of helper numeric operation functions that allows seamless interaction of your Solana Anchor program with the Metaplex ecosystem"
homepage = "https://github.com/Apocentre/anchor-metaplex"
documentation = "https://docs.rs/anchor-metaplex/"
readme = "README.md"
keywords = ["solana", "blockchain", "anchor", "metaplex"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", version = "0.25.0" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", version = "0.25.0" }
mpl-token-metadata = { version = "1.2.10", features = ["no-entrypoint"] }
