[package]
name = "anchor-metaplex"
version = "0.6.1"
edition = "2021"
authors = ["Pavlos Polianidis <info@apocentre.com>"]
repository = "https://github.com/Apocentre/anchor-metaplex"
description = "collection of helper numeric operation functions that allows seamless interaction of your Solana Anchor program with the Metaplex ecosystem"
homepage = "https://github.com/Apocentre/anchor-metaplex"
documentation = "https://docs.rs/anchor-metaplex/"
readme = "README.md"
keywords = ["solana", "blockchain", "anchor", "metaplex"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
mpl-token-metadata = { version = "=1.8.3", features = ["no-entrypoint"] }
spl-token = "3.5.0"
