[package]
name = "anchor-metaplex"
version = "0.6.2"
edition = "2021"
authors = ["Pavlos Polianidis <info@apocentre.com>"]
repository = "https://github.com/Apocentre/anchor-metaplex"
description = "collection of helper numeric operation functions that allows seamless interaction of your Solana Anchor program with the Metaplex ecosystem"
homepage = "https://github.com/Apocentre/anchor-metaplex"
documentation = "https://docs.rs/anchor-metaplex/"
readme = "README.md"
keywords = ["solana", "blockchain", "anchor", "metaplex"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { git = "https://github.com/Apocentre/anchor", branch = "chore/lock_deps" }
anchor-spl = { git = "https://github.com/Apocentre/anchor", branch = "chore/lock_deps" }
mpl-token-metadata = { version = "1.8.3", features = ["no-entrypoint"] }
spl-token = "3.5.0"
